--- a/example/package.json
+++ b/example/package.json
@@ -25,7 +25,7 @@
     "@aws-cdk/aws-cloudfront": "^1.74.0",
     "@aws-cdk/aws-s3": "^1.74.0",
     "@aws-cdk/core": "^1.74.0",
-    "cdk-cloudfront-invalidator": "../",
+    "domain-web-redirect": "../",
     "source-map-support": "^0.5.16"
   }
 }
