--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "cdk-cloudfront-invalidator",
+  "name": "domain-web-redirect",
   "license": "ISC",
-  "version": "0.1.3",
+  "version": "0.1.0",
   "main": "dist/lib/index.js",
   "types": "dist/lib/index.d.ts",
   "keywords": [
     "aws",
     "cdk",
     "construct",
+    "s3",
     "cloudfront",
-    "invalidate",
-    "invalidation"
+    "domain",
+    "redirect",
+    "redirects"
   ],
   "files": [
-    "dist/lambda",
     "dist/lib"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mpvosseller/cdk-cloudfront-invalidator.git"
+    "url": "git+https://github.com/mpvosseller/domain-web-redirect.git"
   },
   "scripts": {
     "lint": "eslint --fix 'src/**'",
@@ -27,33 +28,37 @@
     "clean": "rm -rf dist/",
     "watch": "tsc -w",
     "test": "jest",
-    "prepare": "yarn clean && yarn build",
-    "prepublishOnly": "yarn lint:nofix"
+    "prepare": "yarn clean && yarn lint:nofix && yarn test && yarn build"
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.74.0",
-    "@aws-cdk/aws-iam": "^1.74.0",
-    "@aws-cdk/aws-lambda": "^1.74.0",
+    "@aws-cdk/aws-certificatemanager": "^1.74.0",
+    "@aws-cdk/aws-cloudfront": "^1.74.0",
+    "@aws-cdk/aws-route53": "^1.74.0",
+    "@aws-cdk/aws-route53-targets": "^1.74.0",
     "@aws-cdk/core": "^1.74.0",
-    "@types/aws-lambda": "^8.10.64",
     "@types/jest": "^26.0.10",
     "@types/node": "^14.14.9",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
-    "aws-sdk": "^2.797.0",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.4.2",
-    "nock": "^13.0.5",
     "prettier": "^2.2.0",
     "ts-jest": "^26.2.0",
     "typescript": "~3.9.7"
   },
   "peerDependencies": {
+    "@aws-cdk/aws-certificatemanager": "^1.74.0",
+    "@aws-cdk/aws-cloudfront": "^1.74.0",
     "@aws-cdk/aws-iam": "^1.74.0",
     "@aws-cdk/aws-lambda": "^1.74.0",
+    "@aws-cdk/aws-route53": "^1.74.0",
+    "@aws-cdk/aws-route53-targets": "^1.74.0",
     "@aws-cdk/core": "^1.74.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "cdk-cloudfront-invalidator": "^0.1.3"
+  }
 }
