--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clean": "rm -rf dist/",
     "watch": "tsc -w",
     "test": "jest",
-    "prepare": "yarn clean && yarn lint:nofix && yarn test && yarn build"
+    "prepublishOnly": "yarn clean && yarn lint:nofix && yarn test && yarn build"
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.74.0",
@@ -59,6 +59,6 @@
     "@aws-cdk/core": "^1.74.0"
   },
   "dependencies": {
-    "cdk-cloudfront-invalidator": "^0.1.3"
+    "cdk-cloudfront-invalidator": "^1.0.0"
   }
 }
